# async_sdl_python

./: .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
docs/: api_reference.md  architecture.md  examples.md  getting_started.md  logging_configuration.md  troubleshooting.md
examples/: main.py
pysdl/: __init__.py  children_manager.py  exceptions.py  id_generator.py  logger.py  process.py  registry.py  signal.py  state.py  state_machine.py  system.py  system_signals.py  timer.py
tests/: test_children_manager.py  test_error_handling.py  test_id_generator.py  test_integration.py  test_logger.py  test_process.py  test_registry.py  test_signal.py  test_star_matching.py  test_state.py  test_state_machine.py  test_system.py  test_system_baseline.py  test_system_error_paths.py  test_system_signals.py  test_timer.py
